Login Facebook Cordova
- Logar utilizando facebook cordova
- adicionado os packages para executar o login

--- a/app/settings.json
+++ b/app/settings.json
@@ -1,5 +1,24 @@
 {
-  "public": {
-
-  }
+    "cordova": {
+        "com.phonegap.plugins.facebookconnect": {
+           "APP_ID": "638977909535835",
+           "APP_NAME": "facebook",
+           "secret": "28012ad2d935da4bdbfe26b78c23f77a"
+        }
+    },
+    "public": {
+        "facebook": {
+            "permissions": [
+                "public_profile",
+                "user_interests",
+                "user_activities",
+                "read_friendlists"
+            ],
+            "profileFields": [
+                "name",
+                "gender",
+                "location"
+            ]
+        }
+    }
 }
