Configuracao de conecao app facebook
- alterado o nome da api

--- a/app/settings.json
+++ b/app/settings.json
@@ -2,7 +2,7 @@
     "cordova": {
         "com.phonegap.plugins.facebookconnect": {
            "APP_ID": "638977909535835",
-           "APP_NAME": "facebook",
+           "APP_NAME": "vtv",
            "secret": "28012ad2d935da4bdbfe26b78c23f77a"
         }
     },
