--- a/app/settings.json
+++ b/app/settings.json
@@ -1,26 +1,26 @@
-{
-    "cordova": {
-        "com.phonegap.plugins.facebookconnect": {
-           "APP_ID": "638977909535835",
-           "APP_NAME": "vtv",
-           "secret": "28012ad2d935da4bdbfe26b78c23f77a"
-        }
-    },
-    "public": {
-        "facebook": {
-            "permissions": [
-                "public_profile",
-                "user_interests",
-                "user_activities",
-                "read_friendlists",
-                "email"
-            ],
-            "profileFields": [
-                "name",
-                "gender",
-                "location",
-                "picture"
-            ]
-        }
-    }
-}
+// {
+//     "cordova": {
+//         "com.phonegap.plugins.facebookconnect": {
+//            "APP_ID": "638977909535835",
+//            "APP_NAME": "vtv",
+//            "secret": "28012ad2d935da4bdbfe26b78c23f77a"
+//         }
+//     },
+//     "public": {
+//         "facebook": {
+//             "permissions": [
+//                 "public_profile",
+//                 "user_interests",
+//                 "user_activities",
+//                 "read_friendlists",
+//                 "email"
+//             ],
+//             "profileFields": [
+//                 "name",
+//                 "gender",
+//                 "location",
+//                 "picture"
+//             ]
+//         }
+//     }
+// }
